2003-04-26  Sam Steingold  <sds@gnu.org>

	* array.d (ADJUST-ARRAY): fixed a GC-safety bug
	* eval.d (funcall_iclosure): fixed 2 GC-safety bugs
	* record.d (update_instance): fixed 3 GC-safety bugs
	(keyword_test): fixed last patch
	* control.d (KEYWORD-TEST): ditto

2003-04-26  Sam Steingold  <sds@gnu.org>

	* clos.lisp (ensure-class): when either the old definition or the
	new one is a DEFSTRUCT, just discard the old definition altogether

2003-04-26  Stefan Kain  <stefan.kain@freenet.de>

	* floatprint.lisp: translated all comments

2003-04-26  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 726286 ]: (load :compiling t) redefinition warnings
	* clos.lisp (setf find-class): always call CHECK-REDEFINITION
	* init.lisp (check-redefinition): handle LOAD :COMPILING T;
	always reset SYS::FILE indicator to the new value
	* places.lisp (define-setf-expander, defsetf): call
	CHECK-REDEFINITION at definition time, not macroexpansion time

2003-04-25  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 726282 ]: read_form() botches STACK
	* debug.d (read_form): make sure to unbind *TERMINAL-READ-STREAM*

2003-04-25  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (STACKCHECKB): when non-0, check that we are
	unwinding a binding frame for the correct symbol
	(dynamic_unbind): accept a symbol argument
	(dynamic_unbind_g): same as old dynamic_unbind()
	* debug.d, error.d, eval.d, io.d, predtype.d, spvw_language.d:
	pass the symbol argument to dynamic_unbind() whenever possible

2003-04-22  Sam Steingold  <sds@gnu.org>

	* _distmakefile, makemake.in: distribute clisp.ps and put it into
	lispdocdir together with clisp.html and clisp.dvi

2003-04-22  Sam Steingold  <sds@gnu.org>

	implemented adjusting of non-adjustable arrays (Issue 5)
	* lispbibl.d (X3J13_003): removed undef
	* array.d (array_atype): new function
	(array_element_type, test_displaced): use it
	(ADJUST-ARRAY): when the argument is not adjustable,
	return a fresh array

2003-04-22  Jörg Höhle  <hoehle@users.sourceforge.net>
